Set user for tenkon-chains
When runAsNonRoot is set newer kubernetes (v1.30.0 for sure) requires
manually set runAsUser.

Signed-off-by: Lukáš Doktor <ldoktor@redhat.com>

--- a/konflux-ci/rbac/core/tekton-chains.yaml
+++ b/konflux-ci/rbac/core/tekton-chains.yaml
@@ -220,6 +220,7 @@ spec:
         securityContext:
           readOnlyRootFilesystem: true
           runAsNonRoot: true
+          runAsUser: 1000
       dnsPolicy: ClusterFirst
       restartPolicy: OnFailure
       serviceAccount: chains-secrets-admin
